# funmacs

./: Main.hs  README.md  funmacs.cabal  funmacs.el
test/: main.hs
