Name:                magit-helper
Version:             0.0.1
Synopsis:            A magit-helper application to setup up the "Magit" Emacs mode.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            System
Description:
  A magit-helper application to setup up the "Magit" Emacs mode.

Source-repository head
  type: git
  location: git://github.com/jwiegley/magit-helper.git

Library
    default-language:   Haskell98
    ghc-options: -Wall
    build-depends:
        base                 >= 3 && < 5
      , attoparsec           >= 0.10.4.0
      , binary               >= 0.5.1.1
      , bytestring           >= 0.9.2.1
      , conduit              >= 1.1.0
      , conduit-combinators  >= 0.2.4
      , fast-logger          >= 2.1.5
      , lens                 >= 4.1.2
      , lifted-base          >= 0.2.2.0
      , monad-control        >= 0.3.2.3
      , monad-logger         >= 0.3.4.0
      , old-locale           >= 1.0.0.5
      , pcre-light           >= 0.4
      , text                 >= 0.11.3.1
      , thyme                >= 0.3.1.0
      , transformers         >= 0.3.0.0
      , vector-space         >= 0.8.6
    exposed-modules:
        Control.Magit
    default-extensions: 
        BangPatterns
        FlexibleContexts
        OverloadedStrings

Executable magit-helper
    main-is: Main.hs
    ghc-options: -Wall

    build-depends: 
        base                 >= 4   && < 5
      , magit-helper
      , HStringTemplate      >= 0.7.1
      , attoparsec           >= 0.10.4.0
      , conduit              >= 1.1.0
      , conduit-combinators  >= 0.2.4
      , containers           >= 0.4
      , data-default         >= 0.5.3
      , directory            >= 1.1
      , filepath             >= 1.3
      , language-c           >= 0.4
      , lens                 >= 4.1.2
      , logging              >= 1.3.0
      , logging              >= 1.3.0
      , optparse-applicative >= 0.8.0.1
      , pretty               >= 1.1
      , split                >= 0.2
      , temporary            >= 1.1.2.5
      , text                 >= 0.11.3.1
      , thyme                >= 0.3.1.1
      , transformers         >= 0.2

test-suite test
    hs-source-dirs: test
    default-language: Haskell2010
    main-is: main.hs
    type: exitcode-stdio-1.0
    ghc-options: -Wall -threaded
    build-depends:
        base
      , magit-helper
      , hspec                >= 1.4
      , logging              >= 1.3.0
      , monad-logger         >= 0.3.4.0
      , unix                 >= 2.5.1.1
    default-extensions: 
        OverloadedStrings
